--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <table id="tabla">
         <th>tablita</th>
         <tr>
-            <td>1</td>
+            <td>
+                <a href="serpientes.html">Serpientes</a>
+            </td>
             <td>2</td>
             <td>3</td>
         </tr>
